@@ -69,16 +69,13 @@ span.error {
   accesskey="b" />
 </tal:block>
 
-<tal:block define="silva_permissions here/public/get_silva_permissions">
-  <input class="executor"
-    tal:condition="python: (silva_permissions['ApproveSilvaContent'] and 
-                              options['unapproved'])"
-    style="position:absolute; top:0px; right:0px;"
-    name="edit/preview_open_now:method"
-    type="submit"
-    value="publish now"
-    title="publish this document immediately: alt-p"
-    accesskey="p" />
-</tal:block>
+<input class="executor"
+  tal:condition="options/show_publish_now"
+  style="position:absolute; top:0px; right:0px;"
+  name="edit/preview_open_now:method"
+  type="submit"
+  value="publish now"
+  title="publish this document immediately: alt-p"
+  accesskey="p" />
 
 </form>
